--- a/github-finder/src/App.css
+++ b/github-finder/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-
 /* Global Styles */
+
 :root {
   --primary-color: #dc3545;
   --dark-color: #333333;
@@ -41,6 +41,7 @@ img {
 }
 
 /* Utilities */
+
 .container {
   max-width: 1100px;
   margin: auto;
@@ -49,6 +50,7 @@ img {
 }
 
 /* Text Styles*/
+
 .x-large {
   font-size: 4rem;
   line-height: 1.2;
@@ -99,6 +101,7 @@ img {
 }
 
 /* Center All */
+
 .all-center {
   display: flex;
   flex-direction: column;
@@ -110,13 +113,14 @@ img {
 }
 
 /* Cards */
+
 .card {
   padding: 1rem;
-  border: #ccc 1px dotted;
   margin: 0.7rem 0;
 }
 
 /* List */
+
 .list {
   margin: 0.5rem 0;
 }
@@ -126,58 +130,75 @@ img {
 }
 
 /* Padding */
+
 .p {
   padding: 0.5rem;
 }
+
 .p-1 {
   padding: 1rem;
 }
+
 .p-2 {
   padding: 2rem;
 }
+
 .p-3 {
   padding: 3rem;
 }
+
 .py {
   padding: 0.5rem 0;
 }
+
 .py-1 {
   padding: 1rem 0;
 }
+
 .py-2 {
   padding: 2rem 0;
 }
+
 .py-3 {
   padding: 3rem 0;
 }
 
 /* Margin */
+
 .m {
   margin: 0.5rem;
 }
+
 .m-1 {
   margin: 1rem;
 }
+
 .m-2 {
   margin: 2rem;
 }
+
 .m-3 {
   margin: 3rem;
 }
+
 .my {
   margin: 0.5rem 0;
 }
+
 .my-1 {
   margin: 1rem 0;
 }
+
 .my-2 {
   margin: 2rem 0;
 }
+
 .my-3 {
   margin: 3rem 0;
 }
 
 /* Grid */
+
 .grid-2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -245,50 +266,32 @@ img {
   color: #333;
 }
 
-.btn-primary,
-.bg-primary,
-.badge-primary,
-.alert-primary {
+.btn-primary, .bg-primary, .badge-primary, .alert-primary {
   background: var(--primary-color);
   color: #fff;
 }
 
-.btn-light,
-.bg-light,
-.badge-light,
-.alert-light {
+.btn-light, .bg-light, .badge-light, .alert-light {
   background: var(--light-color);
   color: #333;
 }
 
-.btn-dark,
-.bg-dark,
-.badge-dark,
-.alert-dark {
+.btn-dark, .bg-dark, .badge-dark, .alert-dark {
   background: var(--dark-color);
   color: #fff;
 }
 
-.btn-danger,
-.bg-danger,
-.badge-danger,
-.alert-danger {
+.btn-danger, .bg-danger, .badge-danger, .alert-danger {
   background: var(--danger-color);
   color: #fff;
 }
 
-.btn-success,
-.bg-success,
-.badge-success,
-.alert-success {
+.btn-success, .bg-success, .badge-success, .alert-success {
   background: var(--success-color);
   color: #fff;
 }
 
-.btn-white,
-.bg-white,
-.badge-white,
-.alert-white {
+.btn-white, .bg-white, .badge-white, .alert-white {
   background: #fff;
   color: #333;
   border: #ccc solid 1px;
@@ -298,8 +301,7 @@ img {
   opacity: 0.8;
 }
 
-.bg-light,
-.badge-light {
+.bg-light, .badge-light {
   border: #ccc solid 1px;
 }
 
@@ -308,6 +310,7 @@ img {
 }
 
 /* Forms */
+
 input {
   margin: 1.2rem 0;
 }
@@ -318,12 +321,7 @@ input {
   color: #888;
 }
 
-input[type='text'],
-input[type='email'],
-input[type='password'],
-input[type='date'],
-select,
-textarea {
+input[type='text'], input[type='email'], input[type='password'], input[type='date'], select, textarea {
   display: block;
   width: 100%;
   padding: 0.4rem;
@@ -331,13 +329,11 @@ textarea {
   border: 1px solid #ccc;
 }
 
-input[type='submit'],
-button {
+input[type='submit'], button {
   font: inherit;
 }
 
-table th,
-table td {
+table th, table td {
   padding: 1rem;
   text-align: left;
 }
@@ -347,6 +343,7 @@ table th {
 }
 
 /* Navbar */
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -377,36 +374,29 @@ table th {
 }
 
 /* Mobile Styles */
+
 @media (max-width: 700px) {
   .hide-sm {
     display: none;
   }
-
-  .grid-2,
-  .grid-3,
-  .grid-4 {
+  .grid-2, .grid-3, .grid-4 {
     grid-template-columns: 1fr;
   }
-
   /* Text Styles */
   .x-large {
     font-size: 3rem;
   }
-
   .large {
     font-size: 2rem;
   }
-
   .lead {
     font-size: 1rem;
   }
-
   /* Navbar */
   .navbar {
     display: block;
     text-align: center;
   }
-
   .navbar ul {
     text-align: center;
     justify-content: center;
